<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2026 Mifos Initiative

    This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
    If a copy of the MPL was not distributed with this file,
    You can obtain one at https://mozilla.org/MPL/2.0/.

    See https://github.com/openMF/kmp-project-template/blob/main/LICENSE
-->
<resources>
    <string name="screens_watchlist_star_add_cd">Add to watchlist</string>
    <string name="screens_watchlist_star_remove_cd">Remove from watchlist</string>
</resources>
